<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="11">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/relay"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4.22" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ipText"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/serverIpString"
            android:layout_weight="0.1">
        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connectButtonString"
            android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
            android:id="@+id/connectButton"
            android:layout_weight="0.1"
            android:onClick="connectButtonListener" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goToIpListActivityButton_text"
            android:drawableStart="@drawable/ic_favorite_black_24dp"
            android:id="@+id/ipListActivityButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:onClick="goToIpListActivityButtonListener" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/findServerButtonString"
            android:drawableStart="@drawable/ic_computer_black_24dp"
            android:id="@+id/findServerButton"
            android:layout_weight="0.1"
            android:onClick="findServerButtonListener" />

    </LinearLayout>

</RelativeLayout>
